--- a/components/head/index.css
+++ b/components/head/index.css
@@ -2,11 +2,61 @@
   position: relative;
   box-sizing: border-box;
 }
-
 body {
-
+  background: var(--color-black);
+  font-family: var(--font-family-mono);
+  color: var(--color-black);
+  font-size: 14px;
+  user-select: none;
 }
-
 a {
   color: inherit;
+}
+
+#wrapper {
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+#mainContent {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.InterfaceContainer,
+.FlipDotContainer {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.InterfaceContainer {
+  background: var(--color-flipDot-reg);
+}
+.InterfaceContainer-MainUI {
+
+}
+.InterfaceContainer-TypeToggle {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
+.FlipDotContainer {
+  background: var(--color-flipDot-dark);
+  overflow: hidden;
+}
+
+.InterfaceContainer-Title {
+  position: absolute;
+  left: 10px;
+  height: 10px;
+  top: 100vh;
+  transform: rotate(-90deg);
+  width: calc( 100vh - 10px );
+  text-align: right;
+  transform-origin: top left;
+  font-size: 11px;
 }
