--- a/components/head/index.css
+++ b/components/head/index.css
@@ -8,6 +8,7 @@ body {
   color: var(--color-black);
   font-size: 14px;
   user-select: none;
+  font-feature-settings: "case", "calt", "liga";
 }
 a {
   color: inherit;
