--- a/website/styles/index.css
+++ b/website/styles/index.css
@@ -19,43 +19,8 @@ a {
   width: 100vw;
   overflow-x: hidden;
 }
-#mainContent {
-  width: 100%;
-  height: 100%;
-  display: flex;
-}
 
-.InterfaceContainer,
-.FlipDotContainer {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.InterfaceContainer {
-  background: var(--color-flipDot-reg);
-}
-.InterfaceContainer-MainUI {
-
-}
-.InterfaceContainer-TypeToggle {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-}
-.InterfaceContainer-MainUIToggle {
-  margin-top: 2rem;
-  display: flex;
-  justify-content: center;
-}
-
-.FlipDotContainer {
-  background: var(--color-flipDot-dark);
-  overflow: hidden;
-}
-
-.InterfaceContainer-Title {
+.PageTitle {
   position: absolute;
   left: 10px;
   height: 10px;
@@ -65,4 +30,17 @@ a {
   text-align: right;
   transform-origin: top left;
   font-size: 11px;
+}
+
+.ToggleManifesto {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  cursor: pointer;
+  z-index: 10;
+  font-size: 18px;
+}
+
+.isDisplayingManifesto .ToggleManifesto {
+  color: var(--color-white);
 }
